#React Native Google Cast

import("//react-native/common.gni")

config("LibRNGoogleCast_config") {
  cflags_cc = [ "-std=c++17"]
  cflags_cc += [
    "-Wno-extra-semi",
    "-Wno-sign-compare",
    "-Wno-header-hygiene",
  ]

  include_dirs = [ ".",
                  "//react-native/ReactCommon/",
                ]
}

rns_cxx_tp_component("rngooglecast") {

  # Native module and its dependencies
  sources = [
    "RNGoogleCast.h",
    "RNGoogleCast.cpp",
  ]

  public_configs = [ ":LibRNGoogleCast_config" ]
  public_configs += [ "//build/secondary/folly:folly_config" ]
  deps = [
    "//folly",
    "//skia",
  ]

  with_exceptions = true
  with_rtti = true
}
